--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,40 @@
 ul li {
   list-style: none;
 }
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+header img {
+  width: 50px;
+  height: 50px;
+}
+
+.app-wrapper {
+  display: grid;
+  grid-template-areas: 
+  "h h"
+  "n c";
+
+
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+  /* grid-gap: 10px; */
+}
+
+.header {
+  grid-area: h;
+  background-color: green;
+}
+
+.nav {
+  grid-area: n;
+  background-color: burlywood;
+}
+
+.content {
+  grid-area: c;
+  background-color: blue;
+}
