--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -17,11 +17,11 @@ header img {
   grid-template-areas: 
   "h h"
   "n c";
-
-
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   /* grid-gap: 10px; */
+  width: 1450px;
+  margin: 0 auto;
 }
 
 .header {
@@ -37,4 +37,9 @@ header img {
 .content {
   grid-area: c;
   background-color: blue;
+}
+
+.content .img-bich {
+      width: 100%;
+      height: 400px;
 }
