--- a/my-app/src/components/Navbar/Navbar.module.css
+++ b/my-app/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,9 @@
 .nav {
     grid-area: n;
     background-color: burlywood;
+    padding: 20px;
 }
 
 .item a {
-    color: white;
+    color: black;
 }
