Updated Dialogs.js. New material at Routes path

--- a/my-app/src/components/Dialogs/Dialogs.module.css
+++ b/my-app/src/components/Dialogs/Dialogs.module.css
@@ -1,9 +1,14 @@
 .dialogs {
-
+    display: grid;
+    grid-template-columns: 2fr 10fr;
 }
 
 .dialog_items{
+    padding: 10px;
+}
 
+.dialog_items .active {
+    color: gold;
 }
 
 .dialog{
@@ -11,6 +16,7 @@
 }
 
 .messages{
+    padding: 10px;
 
 }
 
