--- a/my-app/src/components/Navbar/Navbar.module.css
+++ b/my-app/src/components/Navbar/Navbar.module.css
@@ -7,3 +7,29 @@
 .item a {
     color: black;
 }
+
+.friends {
+    margin-top: 30px;
+}
+
+.friends__item {
+    display: flex;
+    flex-direction: column;
+}
+
+.friends__link {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.friends__link:last-of-type {
+    margin-bottom: 0;
+}
+
+.friends__link img {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
